gl33-master/src/test/deca/syntax/invalid/others/parentheseEnPlusPrintlnMethode1.deca
/*
Test sur l'ajout de plusieurs parenthèses à la fin de println dans une fonction

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
    int myFunc(){
      println("Hello"));
      return 1;
    }
}

{

}
